- Added DSA key generation support to openssl_pkey_new(), FR #38731
  (marci at balabit dot hu, Tony)
- Removed current working directory from the php.ini search path for CLI and
  readded it for other SAPIs (restore to pre 5.1.x behavior). (Edin)
- Fixed bug #38779 (engine crashes when require()'ing file with syntax error 
  through userspace stream wrapper). (Tony, Dmitry)
- Fixed bug #38759 (PDO sqlite2 empty query causes segfault). (Tony)
- Fixed bug #38721 (Invalid memory read in date_parse()). (Tony, Derick)
- Fixed bug #38700 (SoapClient::__getTypes never returns). (Dmitry)
- Fixed bug #38693 (curl_multi_add_handle() set curl handle to null). (Ilia)
- Fixed bug #38687 (sockaddr local storage insufficient for all sock
  families). (Sara)
- Fixed bug #38661 (mixed-case URL breaks url-wrappers). (Ilia)
- Fixed bug #38464 (array_count_values() mishandles numeric strings). 
  (php_lists at realplain dot com, Ilia)
- Fixed bug #38096 (large timeout values ignored on 32bit machines in
  stream_socket_accept() and stream_socket_client()). (Ilia)
- Fixed bug #37923 (Display constant value in reflection::export). (Johannes)

31 Aug 2006, PHP 5.2.0RC3
- Updated PCRE to version 6.7. (Ilia)
- Added SoapServer::setObject() method (it is a simplified version of
  SoapServer::setClass() method). (Dmitry)
- Added support for hexadecimal entity in imagettftext() for the bundled GD.
  (Pierre)
- Fixed bug #38653 (memory leak in ReflectionClass::getConstant()). (Tony)
- Fixed bug #38637 (curl_copy_handle() fails to fully copy the cURL handle).
  (Tony, Ilia)
- Fixed bug #38624 (Strange warning when incrementing an object property and 
  exception is thrown from __get method). (Tony)
- Fixed bug #38543 (shutdown_executor() may segfault when memory_limit is too
  low). (Dmitry)
- Fixed bug #38535 (memory corruption in pdo_pgsql driver on error retrieval
  inside a failed query executed via query() method). (Ilia)